tests/ui/parser/issues/isgg-invalid-outer-attttr-issue-127930.stderr
error: an inner attribute is not permitted in this context
  --> $DIR/isgg-invalid-outer-attttr-issue-127930.rs:4:1
   |
LL | #![feature(iter_array_chunks)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL | fn bar() {}
   | ----------- the inner attribute doesn't annotate this function
   |
   = note: inner attributes, like `#![no_std]`, annotate the item enclosing them, and are usually found at the beginning of source files

error: aborting due to 1 previous error

